--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                 <div class="org-icon">
                     <img src="image/icon/himamen.png" alt="Himamen Trilogi">
                 </div>
-                <h3>GenBI Jakarta</h3>
+                <h3>HIMAMEN Trilogi</h3>
             </a>
         </div>
     </section>
@@ -616,4 +616,5 @@
 
 
 </body>
+
 </html>
