--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     
             <!-- EXPERIENCE 1 -->
             <div class="work-card"
-                 data-title="Jakmall x Rakamin"
+                 data-title="Jakmall x Rakamin Academy"
                  data-role="Campaign & Digital Performance Officer · September 2025"
                  data-desc="Responsible for processing, analyzing, and visualizing website and business data."
                  data-image="image/experience/murni.webp"
