update test image project jakmall

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     
             <!-- PROJECT 1 -->
             <div class="project-card">
-                <img src="image/projects/project-digital-marketing.webp" alt="Digital Marketing Project">
+                <img src="image/jakmall-test.jpg" alt="Digital Marketing Project">
     
                 <div class="project-content">
                     <h3>Digital Marketing Performance Analysis</h3>
