update style header responsive

--- a/index.html
+++ b/index.html
@@ -13,15 +13,42 @@
     <header>
         <nav>
             <a class="brand" href="#">Dwi Astika</a>
+    
             <ul class="nav-links">
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#certificates">Certification</a></li>
+                <li>
+                    <a href="#hero">
+                        <i class="fa-solid fa-house"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#about">
+                        <i class="fa-solid fa-user"></i>
+                        <span>About</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#experience">
+                        <i class="fa-solid fa-briefcase"></i>
+                        <span>Experience</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#projects">
+                        <i class="fa-solid fa-folder-open"></i>
+                        <span>Projects</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#certificates">
+                        <i class="fa-solid fa-certificate"></i>
+                        <span>Cert</span>
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
+    
 
     <section id="hero">
         <h1>Hi I'm Dwi Astika</h1>
@@ -612,7 +639,7 @@
                 header.classList.remove('scrolled');
             }
         });
-        </script>
+    </script>
 
 
 </body>
