--- a/noona_closet.html
+++ b/noona_closet.html
@@ -339,6 +339,51 @@ nav {
 }
 }
 
+.audience-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0;
+    margin-top: 30px;
+}
+
+.audience-box {
+    padding: 26px 28px;
+}
+
+.audience-box:nth-child(2n) {
+    border-right: none;
+}
+
+.audience-box.full {
+    grid-column: span 2;
+    border-right: none;
+    border-bottom: none;
+    background: transparent;
+}
+
+.audience-box h3 {
+    font-size: 16.5px;
+    font-weight: 600;
+    color: hsl(210, 39%, 35%);
+    margin-bottom: 12px;
+    text-align: center;
+}
+
+.audience-box ul {
+    list-style: disc;
+    padding-left: 18px;
+}
+
+.audience-box li {
+    font-size: 14.5px;
+    line-height: 1.7;
+    margin-bottom: 8px;
+    color: #334155;
+}
+
+.audience-box li::marker {
+    color: hsl(210, 39%, 35%);
+}
 </style>
 </head>
 
@@ -385,30 +430,71 @@ nav {
     </p>
 </section>
 
-<!-- SEGMENTATION -->
-<section class="section container">
-    <h2>Market Segmentation & Positioning</h2>
-    <div class="info-grid">
-        <div class="info-card">
-            <h3>Target Audience</h3>
-            <ul class="list">
-                <li>Women aged 18+</li>
-                <li>Middle to upper-class consumers</li>
-                <li>University students & professional women</li>
-                <li>Korean fashion enthusiasts</li>
+<!-- TARGET AUDIENCE -->
+<section class="section container reveal">
+    <h2>Target Audience</h2>
+
+    <div class="audience-grid">
+
+        <!-- DEMOGRAFIS -->
+        <div class="audience-box">
+            <h3>Demographics</h3>
+            <ul>
+                <li><strong>Age:</strong> > 18 Years</li>
+                <li><strong>Gender:</strong> Female</li>
+                <li>
+                    <strong>Work & Education:</strong>
+                    Young professionals, office workers, and university students who value appearance and follow fashion trends
+                </li>
+                <li>
+                    <strong>Income Level:</strong>
+                    Middle to upper class with strong purchasing power
+                </li>
             </ul>
         </div>
-        <div class="info-card">
+
+        <!-- PAIN POINT -->
+        <div class="audience-box">
+            <h3>Targeting</h3>
+            <ul>
+                <li>Korean fashion lovers</li>
+                <li>Professional working women</li>
+                <li>Sustainable fashion</li>
+            </ul>
+        </div>
+
+        <!-- PSIKOGRAFIS -->
+        <div class="audience-box">
+            <h3>Psychographics</h3>
+            <ul>
+                <li>Fashion enthusiasts</li>
+                <li>Conscious consumers who value sustainable fashion</li>
+                <li>Fans of Korean culture and Korean fashion style</li>
+            </ul>
+        </div>
+
+        <!-- Brand PROPOSITION -->
+        <div class="audience-box">
             <h3>Brand Positioning</h3>
-            <ul class="list">
-                <li>Premium & sustainable fashion</li>
-                <li>Versatile blazers for daily & office wear</li>
-                <li>Elegant yet comfortable design</li>
+            <ul>
+                <li>Sustainable fashion with premium quality: Designed with sustainability while maintaining exceptional quality</li>
+                <li>Versatile blazers for everyday and profesional look: Stylish yet professional blazers, perfect for daily wear and office</li>
             </ul>
         </div>
+
+        <!-- GEOGRAFIS (FULL WIDTH) -->
+        <div class="audience-box full">
+            <h3>Geographics</h3>
+            <ul>
+                <li>
+                    <strong>Area:</strong>
+                    Jakarta
+                </li>
+            </ul>
+        </div>
+
     </div>
 </section>
-
 <!-- KEYWORD -->
 <section class="section container">
     <h2>Keyword Research</h2>
