--- a/himamen.html
+++ b/himamen.html
@@ -72,7 +72,7 @@
         <!-- ROLE 1 -->
         <div class="role-block">
             <p class="org-position">
-                Secretary — Trilogi University Commissariat<br>
+                Secretary<br>
                 <span>2022 — 2023</span>
             </p>
 
