Update Jakmall Project

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <!-- PROJECT 1 -->
             <div class="project-card project-style">
                 <div class="project-content">
-                    <h3>Digital Marketing Performance Analysis</h3>
+                    <h3>Marketing Plan for Partner Acquisition & Retention at Jakmall</h3>
                     <span>September 2025</span>
                     <p>
                     </p>
