--- a/noona_closet.html
+++ b/noona_closet.html
@@ -14,16 +14,44 @@
 <body>
 
 <header>
-    <nav>
-        <a class="brand" href="index.html">Dwi Astika</a>
-        <ul class="nav-links">
-            <li><a href="#hero">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#certificates">Certification</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav>
+            <a class="brand" href="index.html">Dwi Astika</a>
+    
+            <ul class="nav-links">
+                <li>
+                    <a href="index.html#hero">
+                        <i class="fa-solid fa-house"></i>
+                        <span>Home</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html#about">
+                        <i class="fa-solid fa-user"></i>
+                        <span>About</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html#experience">
+                        <i class="fa-solid fa-briefcase"></i>
+                        <span>Experience</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html#projects">
+                        <i class="fa-solid fa-folder-open"></i>
+                        <span>Projects</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html#certificates">
+                        <i class="fa-solid fa-certificate"></i>
+                        <span>Certificate</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </header>
 
 <!-- HERO -->
@@ -234,11 +262,21 @@
 
 <!-- RESULT -->
 <section class="section container">
-    <h2>Results & Learning</h2>
-    <ul class="list">
-        <li>Clear content direction aligned with brand identity</li>
-        <li>Improved understanding of audience behavior</li>
-        <li>Stronger positioning in competitive fashion market</li>
+    <h2>Project Outcomes</h2>
+    <p>This project resulted in a structured and integrated digital marketing plan for Noona Closet.</p>
+    <ul class="insight-list">
+        <li>
+            A clear keyword structure that supports content discoverability and campaign focus
+        </li>
+        <li>
+            Well-defined content pillars that guide consistent social media execution
+        </li>
+        <li>
+            Advertising and sales activity plans aligned with audience behavior and market trends
+        </li>
+        <li>
+            Improved strategic alignment between research, planning, and creative execution
+        </li>
     </ul>
 </section>
 
