Update Navbar Rakamin Project

--- a/project_rakamin_jakmall.html
+++ b/project_rakamin_jakmall.html
@@ -20,31 +20,31 @@
     
             <ul class="nav-links">
                 <li>
-                    <a href="#hero">
+                    <a href="index.html#hero">
                         <i class="fa-solid fa-house"></i>
                         <span>Home</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#about">
+                    <a href="index.html#about">
                         <i class="fa-solid fa-user"></i>
                         <span>About</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#experience">
+                    <a href="index.html#experience">
                         <i class="fa-solid fa-briefcase"></i>
                         <span>Experience</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#projects">
+                    <a href="index.html#projects">
                         <i class="fa-solid fa-folder-open"></i>
                         <span>Projects</span>
                     </a>
                 </li>
                 <li>
-                    <a href="#certificates">
+                    <a href="index.html#certificates">
                         <i class="fa-solid fa-certificate"></i>
                         <span>Certificate</span>
                     </a>
