--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     <span>August 2020</span>
                     <p>
                     </p>
-                    <a href="project_rakamin_jakmall.html" class="project-link">
+                    <a href="yups_gurt.html" class="project-link">
                         View Case Study →
                     </a>
                 </div>
