--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -13,10 +13,9 @@
 
 <body>
 
-<header>
     <header>
         <nav>
-            <a class="brand" href="index.html">Dwi Astika</a>
+            <a class="brand" href="#">Dwi Astika</a>
     
             <ul class="nav-links">
                 <li>
@@ -52,7 +51,6 @@
             </ul>
         </nav>
     </header>
-</header>
 
 <!-- HERO -->
 <section class="project-hero">
@@ -60,14 +58,13 @@
         <span class="project-label">YUP'S GURT PROJECT</span>
         <h1>Business Plan Competition : Yup's Gurt</h1>
         <p class="project-subtitle">
-            Digital marketing strategy development focusing on keyword research,
-            content planning, and brand positioning for a Korean-inspired fashion label.
+            Comprehensive business planning for a yogurt-based beverage startup focusing on product differentiation, target market analysis, and sustainable value creation.
         </p>
 
         <div class="project-meta">
-            <span>Role: Digital Marketing</span>
-            <span>Program: BNSP Certification Training</span>
-            <span>Year: 2024</span>
+            <span>Role: Participant</span>
+            <span>Program: Business Plan Competition</span>
+            <span>Year: 2020</span>
         </div>
     </div>
 </section>
