--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                  data-title="Jakmall x Rakamin Academy"
                  data-role="Campaign & Digital Performance Officer · September 2025"
                  data-desc="Responsible for processing, analyzing, and visualizing website and business data."
-                 data-image="/image/rakamin_logo.png"
+                 data-image="image/rakamin_logo.png"
                  data-tasks="Developed the “Radiance Partner Program” digital campaign strategy focused on acquiring and retaining Jakmall’s dropship partners in the Health & Beauty category.;Planned and simulated cross-platform media execution across TikTok Ads, Meta Ads, and Google Search Ads, supported by a proposed Rp50M budget allocation and KPI benchmarks for each funnel stage.;Conducted audience and buyer persona analysis to identify key segments, pain points, and value drivers as the basis for targeted campaign messaging.;Mapped a full-funnel campaign timeline—from awareness to retention—ensuring alignment between weekly goals, content assets, and performance objectives."
                  data-tools="Google Trends, Google Slides, Canva, Microsoft Excel"
                  data-skills="Strategic Planning, Funnel Mapping Creative Campaign Ideation, Audience Analysis">
@@ -286,7 +286,7 @@
                  data-title="PT Bina Pertiwi"
                  data-role="Sales Management Internship · August - December 2023"
                  data-desc="Completed hands-on data analytics case studies."
-                 data-image="/image/bina_pertiwi_logo.png"
+                 data-image="image/bina_pertiwi_logo.png"
                  data-tasks="Optimized the customer database by adding 1,070 palm oil companies in Indonesia, resulting in a 91% increase in potential customer conversion.;Compiled a comprehensive report on the development of the palm oil industry, serving as the basis for strategic business expansion recommendations.;Conducted data analysis and visualization related to the coverage area of the palm oil industry to identify sales opportunities and optimize marketing territory."
                  data-tools="Microsoft Word, Microsoft Excel, Canva, Tableu"
                  data-skills="Strategic Sales Planning, Market Research, Communication Skill">
