Update Link Garis

--- a/genbi.html
+++ b/genbi.html
@@ -92,7 +92,7 @@
     </div>
     
 
-    <div class="core-image"> 
+    <div class="core-image-hima"> 
         <img src="image/genbi-hero.webp" alt="GenBI Jakarta Activity">
     </div>
 </section>
