--- a/noona_closet.html
+++ b/noona_closet.html
@@ -13,10 +13,9 @@
 
 <body>
 
-<header>
     <header>
         <nav>
-            <a class="brand" href="index.html">Dwi Astika</a>
+            <a class="brand" href="index.html#">Dwi Astika</a>
     
             <ul class="nav-links">
                 <li>
@@ -52,7 +51,6 @@
             </ul>
         </nav>
     </header>
-</header>
 
 <!-- HERO -->
 <section class="project-hero">
