--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -15,7 +15,7 @@
 
     <header>
         <nav>
-            <a class="brand" href="#">Dwi Astika</a>
+            <a class="brand" href="index.html#">Dwi Astika</a>
     
             <ul class="nav-links">
                 <li>
