--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -162,14 +162,13 @@
     </ul>
 </section>
 
-
 <!-- GALLERY -->
 <section class="section container">
     <h2>Result</h2>
     <div class="campaign-visual-grid">
         <div class="campaign-card">
             <div class="phone-mockup">
-                <img src="image/yups_gurt_result.jpg" alt="Customer Testimonial">
+                <img src="image/yups_gurt_result.jpg" alt="Marketing Plan Competition">
             </div>
         
             <p class="campaign-desc">
