--- a/noona_closet.html
+++ b/noona_closet.html
@@ -58,8 +58,7 @@
         <span class="project-label">DIGITAL MARKETING PROJECT</span>
         <h1>BNSP Certification Training : Study Case Noona Closet</h1>
         <p class="project-subtitle">
-            Digital marketing strategy development focusing on keyword research,
-            content planning, and brand positioning for a Korean-inspired fashion label.
+            Digital marketing strategy development focusing on keyword research, content planning, and brand positioning for a Korean-inspired fashion brand.
         </p>
 
         <div class="project-meta">
@@ -176,7 +175,7 @@
             <strong>High search interest</strong> was identified for keywords such as “Blazer Korea”, “Blazer Wanita”, and “Blazer Korea Style”, indicating strong awareness-level demand.
         </li>
         <li>
-            <strong>More specific terms</strong> such as “Blazer wanita Korea terbaru” reflect higher consideration and purchase intent..
+            <strong>More specific terms</strong> such as “Blazer wanita Korea terbaru” reflect higher consideration and purchase intent.
         </li>
     </ul>
 </section>
