--- a/project_rakamin_jakmall.html
+++ b/project_rakamin_jakmall.html
@@ -58,15 +58,14 @@
 <section class="project-hero">
     <div class="container">
         <span class="project-label">PROJECT CASE STUDY</span>
-        <h1>Digital Marketing Performance Analysis</h1>
+        <h1>Marketing Plan for Partner Acquisition & Retention at Jakmall</h1>
         <p class="project-subtitle">
-            Campaign analysis and optimization to improve digital performance
-            and audience engagement.
+            Strategic Campaign Planning and Performance Optimization
         </p>
 
         <div class="project-meta">
-            <span>Role: Digital Marketing</span>
-            <span>Company: Jakmall x Rakamin</span>
+            <span>Role: Campaign and Digital Performance Officer</span>
+            <span>Company: Jakmall x Rakamin Academy</span>
             <span>Year: 2025</span>
         </div>
     </div>
