--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -74,7 +74,7 @@
     <h2>Project Overview</h2>
     <p>
         Yup’s Gurt is an online-based yogurt drink business project developed to address low yogurt consumption in Indonesia, driven by sour taste perception and limited product variety. Leveraging healthy lifestyle trends and marketing digital. 
-         <br> <br> This project explores how product innovation can increase consumer interest while maintaining affordability and health benefits.
+         <br> <br> Leveraging healthy lifestyle trends and digital marketing strategies.
     </p>
 </section>
 
