--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <!-- PROJECT 2 -->
             <div class="project-card project-style">
                 <div class="project-content">
-                    <h3>BNSP Certification Training : Study Case Noona Closet</h3>
+                    <h3>BNSP Certification Training : <br> Study Case Noona Closet</h3>
                     <span>December 2024</span>
                     <p>
                     </p>
@@ -372,7 +372,7 @@
             <!-- PROJECT 3 -->
             <div class="project-card project-style">
                 <div class="project-content">
-                    <h3>Business Plan Competition : Yup's Gurt</h3>
+                    <h3>Business Plan Competition : <br> Yup's Gurt</h3>
                     <span>August 2020</span>
                     <p>
                     </p>
