--- a/noona_closet.html
+++ b/noona_closet.html
@@ -122,17 +122,8 @@
             </ul>
         </div>
 
-        <!-- Brand PROPOSITION -->
-        <div class="audience-box">
-            <h3>Brand Positioning</h3>
-            <ul>
-                <li>Sustainable fashion with premium quality: Designed with sustainability while maintaining exceptional quality</li>
-                <li>Versatile blazers for everyday and profesional look: Stylish yet professional blazers, perfect for daily wear and office</li>
-            </ul>
-        </div>
-
         <!-- GEOGRAFIS (FULL WIDTH) -->
-        <div class="audience-box full">
+        <div class="audience-box">
             <h3>Geographics</h3>
             <ul>
                 <li>
@@ -141,6 +132,15 @@
                 </li>
             </ul>
         </div>
+        
+        <!-- Brand PROPOSITION -->
+        <div class="audience-box full">
+            <h3>Brand Positioning</h3>
+            <ul>
+                <li>Sustainable fashion with premium quality: Designed with sustainability while maintaining exceptional quality</li>
+                <li>Versatile blazers for everyday and profesional look: Stylish yet professional blazers, perfect for daily wear and office</li>
+            </ul>
+        </div>        
 
     </div>
 </section>
@@ -328,8 +328,10 @@
     </div>
 </section>
 
-<div class="back-link">
-    <a href="index.html#projects">← Back to Projects</a>
+<!-- Backlink -->
+<div class="project-navigation">
+    <a href="project_rakamin_jakmall.html" class="nav-link back">← Back to Projects</a>
+    <a href="yups_gurt.html" class="nav-link next">Next Project →</a>
 </div>
 
 <section id="footer">
