--- a/project_rakamin_jakmall.html
+++ b/project_rakamin_jakmall.html
@@ -425,8 +425,9 @@
 </section>
 
 <!-- BACK -->
-<div class="back-link">
-    <a href="index.html#projects">← Back to Projects</a>
+<div class="project-navigation">
+    <a href="index.html#projects" class="nav-link back">← Back to Projects</a>
+    <a href="noona_closet.html" class="nav-link next">Next Project →</a>
 </div>
 
 <section id="footer">
