--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -178,6 +178,84 @@
     </ul>
 </section>
 
+<!-- Digital Marketing Strategy -->
+<section class="section container">
+    <h2>Content Pillar</h2>
+    <p class="table-caption">
+        This strategy outlines a funnel-based digital marketing approach designed to support brand awareness, consideration, and first-time purchase through targeted content across digital platforms.
+    </p>
+
+    <div class="budget-table-wrap">
+        <table class="budget-table">
+            <thead>
+                <tr>
+                    <th>Funnel Stage</th>
+                    <th>Goals</th>
+                    <th>Content Focus</th>
+                    <th>Content Format</th>
+                    <th>Channel</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- AWARENESS -->
+                <tr>
+                    <td rowspan="2">Awareness</td>
+                    <td rowspan="2">
+                        Build brand awareness and product recognition
+                    </td>
+                    <td>
+                        Educational content on health benefits and ingredients of Yup’s Gurt
+                    </td>
+                    <td rowspan="2">Short Video / Reels</td>
+                    <td rowspan="2">Instagram & TikTok</td>
+                </tr>
+                <tr>
+                    <td>
+                        Visual content highlighting product texture and flavor variants
+                    </td>
+                </tr>
+
+                <!-- CONSIDERATION -->
+                <tr>
+                    <td rowspan="2">Consideration</td>
+                    <td rowspan="2">
+                        Build interest and credibility
+                    </td>
+                    <td>
+                        Micro-influencer collaborations aligned with health-conscious audiences
+                    </td>
+                    <td rowspan="2">Story / Feed Post / Reels</td>
+                    <td rowspan="2">Instagram</td>
+                </tr>
+                <tr>
+                    <td>
+                        Product storytelling behind the innovation
+                    </td>
+                </tr>
+
+                <!-- CONVERSION -->
+                <tr>
+                    <td rowspan="2">Conversion</td>
+                    <td rowspan="2">
+                        Encourage first-time purchase
+                    </td>
+                    <td>
+                        Promotions: Buy 1 Get 1 offers
+                    </td>
+                    <td rowspan="2">Story / Feed Post</td>
+                    <td>Instagram</td>
+                </tr>
+                <tr>
+                    <td>
+                        Optimized delivery platform visuals, descriptions, and pricing
+                    </td>
+                    <td>Delivery Platform</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</section>
+
 <!-- GALLERY -->
 <section class="section container">
     <h2>Result</h2>
