--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -58,11 +58,11 @@
         <span class="project-label">YUP'S GURT PROJECT</span>
         <h1>Business Plan Competition : Yup's Gurt</h1>
         <p class="project-subtitle">
-            Comprehensive business planning for a yogurt-based beverage startup focusing on product differentiation, target market analysis, and sustainable value creation.
+            Product innovation and digital marketing strategy for a differentiated yogurt-based beverage.
         </p>
 
         <div class="project-meta">
-            <span>Role: Participant</span>
+            <span>Role: Project Contributor – Business & Marketing Strategy (Project-Based)</span>
             <span>Program: Business Plan Competition</span>
             <span>Year: 2020</span>
         </div>
@@ -159,28 +159,9 @@
     </div>
 </section>
 
-<!-- Key Contributions -->
-<section class="section container">
-    <h2>Key Contributions</h2>
-    <ul class="insight-list">
-        <li>
-            Conducted a comprehensive market analysis using SWOT to identify strengths, weaknesses, opportunities, and threats relevant to product development and market positioning.
-        </li>
-        <li>
-            Developed a clear product differentiation strategy, positioning the yogurt-and-cereal combination as a unique value proposition and competitive advantage.
-        </li>
-        <li>
-            Built a strong value proposition emphasizing health benefits, convenience, and a new taste experience tailored to millennial consumers.
-        </li>
-        <li>
-            Designed product mockups to visualize packaging and product concepts for pitching, stakeholder communication, and idea validation.
-        </li>
-    </ul>
-</section>
-
 <!-- Digital Marketing Strategy -->
 <section class="section container">
-    <h2>Content Pillar</h2>
+    <h2>Digital Marketing Strategy</h2>
     <p class="table-caption">
         This strategy outlines a funnel-based digital marketing approach designed to support brand awareness, consideration, and first-time purchase through targeted content across digital platforms.
     </p>
@@ -254,6 +235,22 @@
             </tbody>
         </table>
     </div>
+</section>
+
+<!-- Key Contributions -->
+<section class="section container">
+    <h2>Key Contributions</h2>
+    <ul class="insight-list">
+        <li>
+            Conducted a market analysis using SWOT to identify key challenges, opportunities, and competitive factors influencing product development and positioning.
+        </li>
+        <li>
+            Developed an STP (Segmentation, Targeting, Positioning) framework to identify relevant target consumers and guide marketing decisions.
+        </li>
+        <li>
+            Planned a funnel-based digital marketing strategy covering awareness, consideration, and conversion stages.
+        </li>
+    </ul>
 </section>
 
 <!-- GALLERY -->
