--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="container">
             <div class="row">
                 <div class="about1">
-                    <img src="image/img-profile-dwi-astika.png" alt="About Me">
+                    <img src="image/profile.jpeg" alt="Dwi Astika">
                 </div>
                 <div class="about2">
                     <h1 class="sub-title">About Me</h1>
