Update Image and CV

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                     </div>
                     
                     <div class="tab-contents" id="Skills">
+                        <p class="skills-hint">Click for More Details</p>
                         <ul class="skills-container">
                             <li class="skill-item" data-skill="analytics">
                                 <div class="skill-header">
@@ -207,7 +208,7 @@
                                 Download my CV to learn more about my experience, skills, and professional background.
                             </p>
                     
-                            <a href="CV - AlvitoDienova.pdf" download class="download-btn">
+                            <a href="image/CV/CV_Dwi Astika.pdf" download class="download-btn">
                                 Download CV
                             </a>
                     </div>
