--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
             <h4 id="skillsTitle">Skills</h4>
             <div class="tool-tags" id="modalSkills"></div>
 
-            <h4 id="PhotoTitle">Work Highlight</h4>
+            <h4 id="PhotoTitle">Work Highlights</h4>
             <div class="modal-gallery" id="modalGalleryWrap">
                 <img id="modalGalleryImage" src="" alt="">
             </div>
