--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -132,6 +132,11 @@
                 <li>Age: &gt; 1 years</li>
                 <li>Gender: Male and female</li>
             </ul>
+
+            <h4 style="margin-top: 30px;">Geographics</h4>
+            <ul>
+                <li>Area: Jakarta</li>
+            </ul>
         </div>
 
         <!-- PSYCHOGRAPHIC -->
