--- a/yups_gurt.html
+++ b/yups_gurt.html
@@ -5,52 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Yup's Gurt Project | Dwi Astika</title>
 <link rel="stylesheet" href="yups.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />    
+<link rel="stylesheet" href="./components/style-components.css">
+<script src="js/loader.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>   
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
 
-<header>
-    <nav>
-        <a class="brand" href="index.html#">Dwi Astika</a>
-
-        <ul class="nav-links">
-            <li>
-                <a href="index.html#hero">
-                    <i class="fa-solid fa-house"></i>
-                    <span>Home</span>
-                </a>
-            </li>
-            <li>
-                <a href="index.html#about">
-                    <i class="fa-solid fa-user"></i>
-                    <span>About</span>
-                </a>
-            </li>
-            <li>
-                <a href="index.html#experience">
-                    <i class="fa-solid fa-briefcase"></i>
-                    <span>Experience</span>
-                </a>
-            </li>
-            <li>
-                <a href="index.html#projects">
-                    <i class="fa-solid fa-folder-open"></i>
-                    <span>Projects</span>
-                </a>
-            </li>
-            <li>
-                <a href="index.html#certificates">
-                    <i class="fa-solid fa-certificate"></i>
-                    <span>Certificate</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-</header>
+<div id="navbar"></div>
 
 <!-- HERO -->
 <section class="project-hero">
@@ -354,13 +318,7 @@
     </div>
 </section>
 
-<a href="https://wa.me/623874780065"
-   class="whatsapp-float no-transition"
-   target="_blank"
-   rel="noopener noreferrer"
-   aria-label="Chat via WhatsApp">
-    <i class="fa-brands fa-whatsapp"></i>
-</a>
+<div id="whatsapp-global"></div>
 
 <script>
     const imgs = document.querySelectorAll('.gallery img');
