--- a/genbi.html
+++ b/genbi.html
@@ -9,49 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="./components/style-components.css">
+    <script src="js/loader.js"></script>
 
 </head>
 
 <body>
 
-    <header>
-        <nav>
-            <a class="brand" href="index.html">Dwi Astika</a>
-    
-            <ul class="nav-links">
-                <li>
-                    <a href="index.html#hero">
-                        <i class="fa-solid fa-house"></i>
-                        <span>Home</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html#about">
-                        <i class="fa-solid fa-user"></i>
-                        <span>About</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html#experience">
-                        <i class="fa-solid fa-briefcase"></i>
-                        <span>Experience</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html#projects">
-                        <i class="fa-solid fa-folder-open"></i>
-                        <span>Projects</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html#certificates">
-                        <i class="fa-solid fa-certificate"></i>
-                        <span>Certificate</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+<div id="navbar"></div>
     
 
 <section class="org-hero">
@@ -146,8 +111,6 @@
     </div>
 </section>
 
-
-
 <!-- MODAL -->
 <div class="modal-overlay" id="eventModal">
     <div class="modal-box">
@@ -185,15 +148,7 @@
     </div>
 </section>
 
-
-<a href="https://wa.me/6283874780065"
-   class="whatsapp-float"
-   target="_blank"
-   aria-label="Chat via WhatsApp">
-    <i class="fa-brands fa-whatsapp"></i>
-</a>
-
-
+<div id="whatsapp-global"></div>
 
 <script>
     const modal = document.getElementById('eventModal');
